--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Snow Adventures</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="..css/style.css" />
 </head>
 <body>
   <div class="wrap">
@@ -99,4 +99,5 @@
   </div>
 </body>
 </html>
+
 
