--- a/pages/about.html
+++ b/pages/about.html
@@ -12,11 +12,11 @@
       <div class="brand">Snow Adventures</div>
       <nav class="nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="stories.html">Stories</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../destinations.html">Destinations</a></li>
+          <li><a href="../stories.html">Stories</a></li>
           <li><a href="about.html" aria-current="page">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -60,4 +60,5 @@
   </div>
 </body>
 </html>
+
 
