--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Snow Adventures</title>
-  <link rel="stylesheet" href="..css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <div class="wrap">
@@ -13,9 +13,9 @@
       <div class="brand">Snow Adventures</div>
       <nav class="nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="stories.html">Stories</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../destinations.html">Destinations</a></li>
+          <li><a href="../stories.html">Stories</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html" aria-current="page">Contact</a></li>
         </ul>
@@ -99,5 +99,6 @@
   </div>
 </body>
 </html>
+
 
 
