--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Snow Adventures</title>
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -66,4 +67,5 @@
   </div>
 </body>
 </html>
+
 
