--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Snow Adventures</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
@@ -99,6 +100,7 @@
   </div>
 </body>
 </html>
+
 
 
 
