Add inclusive winter sports page with features and stories
This page highlights inclusive winter sports programs and features various adaptive activities for individuals with disabilities. It includes testimonials, program details, and a call to action for booking adventures.

--- a/pages/inclusive.html
+++ b/pages/inclusive.html
@@ -1,1 +1,188 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inclusive Adventures — Snow Adventures</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <a class="skip-link" href="#main">Skip to main content</a>
+  <div class="wrap">
+    <header class="header">
+      <div class="brand">Snow Adventures</div>
+      <nav class="nav" aria-label="Primary navigation">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../destinations.html">Destinations</a></li>
+          <li><a href="../stories.html">Stories</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="inclusive.html" aria-current="page">Inclusive Adventures</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <main id="main" tabindex="-1">
+    
+      <section class="section inclusive-hero">
+        <h1>Adventures for Everyone</h1>
+        <p>Breaking barriers in winter sports — because everyone deserves the thrill of snow adventures</p>
+      </section>
 
+      <article class="inclusive-intro">
+        <h2>Inclusive Winter Sports Programs</h2>
+        <p>
+          At <strong>Snow Adventures</strong>
+        </p>
+        <p>
+        </p>
+      </article>
+
+      <div class="features-grid">
+        <div class="feature-box">
+          <span class="icon" aria-hidden="true">🏂</span>
+          <h3>Adaptive Snowboarding</h3>
+          <p>
+            Our certified instructors specialize in adaptive techniques, including programs for 
+            visually impaired athletes. With specially trained guides and audio cues, blind 
+            snowboarders can experience the rush of the slopes.
+          </p>
+          <ul>
+            <li>One-on-one guide training</li>
+            <li>Audio navigation systems</li>
+            <li>Specialized safety equipment</li>
+            <li>Beginner to advanced levels</li>
+          </ul>
+        </div>
+
+        <div class="feature-box">
+          <span class="icon" aria-hidden="true">⛷️</span>
+          <h3>Accessible Ski Programs</h3>
+          <p>
+            From sit-skiing to blind skiing with audio guides, our programs accommodate various 
+            abilities and ensure everyone can enjoy the slopes safely and confidently.
+          </p>
+          <ul>
+            <li>Sit-ski equipment available</li>
+            <li>Mono-ski options</li>
+            <li>Audio-guided skiing</li>
+            <li>Professional adaptive instructors</li>
+          </ul>
+        </div>
+
+        <div class="feature-box">
+          <span class="icon" aria-hidden="true">🎿</span>
+          <h3>Sensory-Friendly Experiences</h3>
+          <p>
+            We offer quiet hours, sensory maps, and specialized instruction for individuals with 
+            sensory processing needs, making winter sports accessible to those with autism and 
+            other conditions.
+          </p>
+          <ul>
+            <li>Quiet practice hours</li>
+            <li>Sensory-friendly facilities</li>
+            <li>Visual schedules</li>
+            <li>Flexible pacing options</li>
+          </ul>
+        </div>
+
+        <div class="feature-box">
+          <span class="icon" aria-hidden="true">🦮</span>
+          <h3>Service Animals Welcome</h3>
+          <p>
+            Your service animals are always welcome on our adventures. We provide special 
+            accommodations and safe spaces for your four-legged companions.
+          </p>
+          <ul>
+            <li>Pet-friendly lodges</li>
+            <li>Service animal rest areas</li>
+            <li>Specialized harnesses</li>
+            <li>Animal safety protocols</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Success Stories (FLEXBOX - Task 3) -->
+      <section class="stories-section">
+        <h2>Inspiring Stories from Our Community</h2>
+        <div class="stories-flex">
+          <blockquote class="story-box">
+            <p>
+              "Losing my sight didn't mean losing my love for snowboarding. With Snow Adventures' 
+              adaptive program, I'm back on the slopes and loving every moment. The guides use clear 
+              audio cues, and I feel completely safe and exhilarated!"
+            </p>
+            <footer class="author">— Sarah Mitchell, Adaptive Snowboarder</footer>
+          </blockquote>
+
+          <blockquote class="story-box">
+            <p>
+              "As a wheelchair user, I never thought I'd ski again. The sit-ski program changed my 
+              life. The instructors are patient, knowledgeable, and genuinely excited to see everyone 
+              succeed."
+            </p>
+            <footer class="author">— James Rodriguez, Adaptive Skier</footer>
+          </blockquote>
+
+          <blockquote class="story-box">
+            <p>
+              "My autistic son struggled with crowded ski resorts. The sensory-friendly hours at 
+              Snow Adventures made all the difference. He now looks forward to our winter trips 
+              every year!"
+            </p>
+            <footer class="author">— Linda Chen, Parent</footer>
+          </blockquote>
+        </div>
+      </section>
+
+      <article class="section box">
+        <h2>Why Inclusive Winter Sports Matter</h2>
+        <p>
+          Studies show that adaptive sports programs significantly improve physical health, mental 
+          well-being, and social connections for people with disabilities. Winter sports, in particular, 
+          offer unique benefits:
+        </p>
+        <ul class="values">
+          <li>[ icon ] Builds confidence and independence</li>
+          <li>[ icon ] Improves physical strength and coordination</li>
+          <li>[ icon ] Creates lasting friendships and community</li>
+          <li>[ icon ] Provides equal access to outdoor recreation</li>
+        </ul>
+        <p>
+          Our programs have helped hundreds of individuals discover the joy of winter sports, 
+          proving that with the right support and equipment, <strong>anything is possible</strong>.
+        </p>
+        <div class="decor" aria-hidden="true"><span></span><span></span></div>
+      </article>
+
+      <section class="section box">
+        <h2>See Our Programs in Action</h2>
+        <div class="hero-media" style="height: 280px;" role="img" aria-label="Video placeholder showing inclusive winter sports programs">
+          <span>[ Video: Adaptive Winter Sports Program ]</span>
+        </div>
+        <p style="margin-top: 14px; line-height: 1.6;">
+          Watch how our certified instructors work with athletes of all abilities to create 
+          unforgettable mountain experiences. From first-time adaptive skiers to experienced 
+          blind snowboarders, everyone finds their place on the slopes.
+        </p>
+      </section>
+
+      <section class="cta-section">
+        <h2>Ready to Join Us?</h2>
+        <p>
+          Book your inclusive adventure today and experience the thrill of winter sports in a 
+          supportive, accessible environment. Our team is here to answer any questions and help 
+          you plan the perfect trip.
+        </p>
+        <a class="btn" href="../contact.html">Contact Us Today</a>
+      </section>
+    </main>
+
+    <footer class="footer" role="contentinfo">
+      <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
+    </footer>
+  </div>
+</body>
+</html>
