Update navigation to include Inclusive Adventures link
Added link to 'Inclusive Adventures' page in navigation.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-        <ul>
-          <li><a href="index.html" aria-current="page">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="stories.html">Stories</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+  <ul>
+    <li><a href="index.html" aria-current="page">Home</a></li>
+    <li><a href="destinations.html">Destinations</a></li>
+    <li><a href="stories.html">Stories</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="pages/inclusive.html">Inclusive Adventures</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
     </header>
     <main id="main">
       <section class="hero">
@@ -68,6 +69,7 @@
   </div>
 </body>
 </html>
+
 
 
 
