--- a/pages/about.html
+++ b/pages/about.html
@@ -13,14 +13,15 @@
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../destinations.html">Destinations</a></li>
-          <li><a href="../stories.html">Stories</a></li>
-          <li><a href="about.html" aria-current="page">About</a></li>
-          <li><a href="../contact.html">Contact</a></li>
-        </ul>
-      </nav>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../destinations.html">Destinations</a></li>
+    <li><a href="../stories.html">Stories</a></li>
+    <li><a href="about.html" aria-current="page">About</a></li>
+    <li><a href="inclusive.html">Inclusive Adventures</a></li>
+    <li><a href="../contact.html">Contact</a></li>
+  </ul>
+</nav>
     </header>
     <main id="main" tabindex="-1">
       <section class="section about-hero">
@@ -62,6 +63,7 @@
   </div>
 </body>
 </html>
+
 
 
 
