Add 'Inclusive Adventures' link to navigation
Updated the contact page to include a new link for 'Inclusive Adventures' in the navigation.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,14 +14,15 @@
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../destinations.html">Destinations</a></li>
-          <li><a href="../stories.html">Stories</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" aria-current="page">Contact</a></li>
-        </ul>
-      </nav>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../destinations.html">Destinations</a></li>
+    <li><a href="../stories.html">Stories</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="inclusive.html">Inclusive Adventures</a></li>
+    <li><a href="contact.html" aria-current="page">Contact</a></li>
+  </ul>
+</nav>
     </header>
 
     <main id="main" tabindex="-1">
@@ -101,6 +102,7 @@
   </div>
 </body>
 </html>
+
 
 
 
