Revise index.html with new hero image and links
Updated the hero section with an image and modified links in the navigation and buttons.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Snow Adventures</title>
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -13,23 +13,25 @@
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-  <ul>
-    <li><a href="index.html" aria-current="page">Home</a></li>
-    <li><a href="destinations.html">Destinations</a></li>
-    <li><a href="stories.html">Stories</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="pages/inclusive.html">Inclusive Adventures</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+        <ul>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="stories.html">Stories</a></li>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/inclusive.html">Inclusive Adventures</a></li>
+          <li><a href="pages/contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <main id="main">
       <section class="hero">
-        <div class="hero-media" role="img" aria-label="Snowy mountains — hero image placeholder"><span>IMAGE</span></div>
+        <div class="hero-media" role="img" aria-label="Snowy mountains hero image">
+          <img src="https://images.unsplash.com/photo-1551698618-1dfe5d97d256?w=800&h=600&fit=crop" alt="Snowboarder carving down snowy mountain slope" />
+        </div>
         <div class="hero-copy">
           <h1>Thrilling Snow Adventures</h1>
           <div class="btn-group">
-            <a class="btn" href="booking.html">Plan a Trip</a>
+            <a class="btn" href="pages/contact.html">Plan a Trip</a>
             <a class="btn" href="destinations.html">Explore Packages</a>
           </div>
         </div>
@@ -38,22 +40,28 @@
         <h2>Popular Destinations</h2>
         <div class="grid">
           <a class="card" href="destinations.html#swiss-alps">
-            <div class="thumb">[ icon/image ]</div>
+            <div class="thumb">
+              <img src="https://images.unsplash.com/photo-1605540436563-5bca919ae766?w=400&h=400&fit=crop" alt="Swiss Alps ski resort with snowy peaks" />
+            </div>
             <div class="title">Swiss Alps</div>
           </a>
           <a class="card" href="destinations.html#whistler">
-            <div class="thumb">[ icon/image ]</div>
+            <div class="thumb">
+              <img src="https://images.unsplash.com/photo-1515790334209-6d286f061fdf?w=400&h=400&fit=crop" alt="Whistler ski slopes covered in fresh powder" />
+            </div>
             <div class="title">Whistler</div>
           </a>
           <a class="card" href="destinations.html#japan-trails">
-            <div class="thumb">[ icon/image ]</div>
+            <div class="thumb">
+              <img src="https://images.unsplash.com/photo-1518621845365-c90529668268?w=400&h=400&fit=crop" alt="Japan powder snow trails through forests" />
+            </div>
             <div class="title">Japan Trails</div>
           </a>
           <aside class="features" aria-hidden="true">
             <ul>
-              <li>[ icon ] Safe Trips</li>
-              <li>[ icon ] Expert Guides</li>
-              <li>[ icon ] Gear Included</li>
+              <li>🛡️ Safe Trips</li>
+              <li>👨‍🏫 Expert Guides</li>
+              <li>🎒 Gear Included</li>
             </ul>
             <div class="decor">
               <span></span>
