Enhance about page with image and emojis
Updated the hero media section with an image of Lucas Snow and added emojis to the mission and values section.

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,19 +13,21 @@
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-  <ul>
-    <li><a href="../index.html">Home</a></li>
-    <li><a href="../destinations.html">Destinations</a></li>
-    <li><a href="../stories.html">Stories</a></li>
-    <li><a href="about.html" aria-current="page">About</a></li>
-    <li><a href="inclusive.html">Inclusive Adventures</a></li>
-    <li><a href="../contact.html">Contact</a></li>
-  </ul>
-</nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../destinations.html">Destinations</a></li>
+          <li><a href="../stories.html">Stories</a></li>
+          <li><a href="about.html" aria-current="page">About</a></li>
+          <li><a href="inclusive.html">Inclusive Adventures</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <main id="main" tabindex="-1">
       <section class="section about-hero">
-        <div class="hero-media" role="img" aria-label="Portrait placeholder of Lucas Snow"><span>[ Lucas Snow — image placeholder ]</span></div>
+        <div class="hero-media" role="img" aria-label="Portrait of Lucas Snow">
+          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=600&h=600&fit=crop" alt="Lucas Snow, founder of Snow Adventures" />
+        </div>
         <div class="hero-copy">
           <h1>Chasing adventure through every snow-covered peak.</h1>
         </div>
@@ -33,9 +35,9 @@
       <section class="section about-story box">
         <h2>Meet Lucas Snow</h2>
         <p>
-          Hey, I’m Lucas Snow — the guy behind <strong>Snow Adventures</strong>.  
-          I’ve spent most of my life chasing the perfect snow trail. From the
-          Swiss Alps to Whistler, I’ve turned my love for winter sports into a passion for helping others
+          Hey, I'm Lucas Snow — the guy behind <strong>Snow Adventures</strong>.  
+          I've spent most of my life chasing the perfect snow trail. From the
+          Swiss Alps to Whistler, I've turned my love for winter sports into a passion for helping others
           experience that same thrill.
         </p>
         <p>
@@ -50,9 +52,9 @@
           My mission is to make every trip feel personal, exciting, and unforgettable — no matter where the snow takes us.
         </p>
         <ul class="values">
-          <li>[ icon ] Safety and professionalism in every journey</li>
-          <li>[ icon ] Small friendly groups led by expert guides</li>
-          <li>[ icon ] Genuine love for adventure and discovery</li>
+          <li>🛡️ Safety and professionalism in every journey</li>
+          <li>👥 Small friendly groups led by expert guides</li>
+          <li>❤️ Genuine love for adventure and discovery</li>
         </ul>
         <div class="decor" aria-hidden="true"><span></span><span></span></div>
       </section>
@@ -63,8 +65,3 @@
   </div>
 </body>
 </html>
-
-
-
-
-
