Revise contact page layout and details
Updated contact information and improved layout.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,21 +10,19 @@
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
   <div class="wrap">
-
     <header class="header">
       <div class="brand">Snow Adventures</div>
       <nav class="nav" aria-label="Primary navigation">
-  <ul>
-    <li><a href="../index.html">Home</a></li>
-    <li><a href="../destinations.html">Destinations</a></li>
-    <li><a href="../stories.html">Stories</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="inclusive.html">Inclusive Adventures</a></li>
-    <li><a href="contact.html" aria-current="page">Contact</a></li>
-  </ul>
-</nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../destinations.html">Destinations</a></li>
+          <li><a href="../stories.html">Stories</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="inclusive.html">Inclusive Adventures</a></li>
+          <li><a href="contact.html" aria-current="page">Contact</a></li>
+        </ul>
+      </nav>
     </header>
-
     <main id="main" tabindex="-1">
       <section class="section">
         <div class="contact-hero">
@@ -33,10 +31,8 @@
       </section>
       <section class="section">
         <div class="contact-grid">
-
           <div class="contact-form box">
             <h2>Send a Message</h2>
-
             <form action="#" method="post" class="form">
               <div class="form-row two">
                 <div class="field">
@@ -48,63 +44,50 @@
                   <input id="email" name="email" type="email" required>
                 </div>
               </div>
-
               <div class="form-row">
                 <div class="field">
                   <label for="subject">Subject</label>
                   <input id="subject" name="subject" type="text">
                 </div>
               </div>
-
               <div class="form-row">
                 <div class="field">
                   <label for="message">Message</label>
                   <textarea id="message" name="message" rows="6"></textarea>
                 </div>
               </div>
-
               <div class="form-actions">
                 <button type="submit" class="btn">Send</button>
               </div>
             </form>
           </div>
-
           <aside class="contact-info box">
             <h2>Contact Info</h2>
             <ul class="info-list">
-              <li><strong>Email:</strong> hello@snowtrails.example</li>
-              <li><strong>Phone:</strong> +1 (000) 000-0000</li>
-              <li><strong>Hours:</strong> Mon–Fri, 09:00–17:00</li>
-              <li><strong>Office:</strong> 100 Mountain Rd, Snow Ville</li>
-              <li><strong>Social:</strong> [ IG ]  [ FB ]  [ X ]</li>
+              <li><strong>📧 Email:</strong> hello@snowadventures.com</li>
+              <li><strong>📞 Phone:</strong> +1 (555) 123-4567</li>
+              <li><strong>🕒 Hours:</strong> Mon–Fri, 09:00–17:00</li>
+              <li><strong>📍 Office:</strong> 100 Mountain Rd, Snow Ville</li>
+              <li><strong>💬 Social:</strong> Instagram | Facebook | Twitter</li>
             </ul>
-
-            <div class="map"  role="img" aria-label="Map placeholder showing Snow Adventures office location"><span>MAP / IMAGE</span></div>
-
+            <div class="map" role="img" aria-label="Map showing Snow Adventures office location">
+              <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?w=600&h=300&fit=crop" alt="Mountain location map" style="width:100%; height:100%; object-fit:cover;" />
+            </div>
             <div class="features-mini">
               <ul>
-                <li>[ icon ] Safe Trips</li>
-                <li>[ icon ] Expert Guides</li>
-                <li>[ icon ] Gear Included</li>
+                <li>🛡️ Safe Trips</li>
+                <li>👨‍🏫 Expert Guides</li>
+                <li>🎒 Gear Included</li>
               </ul>
               <div class="decor" aria-hidden="true"><span></span><span></span></div>
             </div>
           </aside>
-
         </div>
       </section>
     </main>
-
     <footer class="footer" role="contentinfo">
       <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
     </footer>
-
   </div>
 </body>
 </html>
-
-
-
-
-
-
