--- a/pages/inclusive.html
+++ b/pages/inclusive.html
@@ -19,27 +19,35 @@
           <li><a href="../stories.html">Stories</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="inclusive.html" aria-current="page">Inclusive Adventures</a></li>
-          <li><a href="../contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     
     <main id="main" tabindex="-1">
-    
+      <!-- Hero Section -->
       <section class="section inclusive-hero">
         <h1>Adventures for Everyone</h1>
         <p>Breaking barriers in winter sports — because everyone deserves the thrill of snow adventures</p>
       </section>
 
+      <!-- Introduction -->
       <article class="inclusive-intro">
         <h2>Inclusive Winter Sports Programs</h2>
         <p>
-          At <strong>Snow Adventures</strong>
+          At <strong>Snow Adventures</strong>, we believe that disability should never be a barrier 
+          to experiencing the excitement of winter sports. Our inclusive programs are designed to make 
+          snowboarding, skiing, and other snow activities accessible to everyone, including specialized 
+          programs for blind and visually impaired athletes.
         </p>
         <p>
+          With certified adaptive instructors, specialized equipment, and a passion for inclusivity, 
+          we're proud to help people of all abilities discover the joy of carving through fresh powder 
+          and conquering mountain peaks.
         </p>
       </article>
 
+      <!-- Features Grid (CSS GRID - Task 3) -->
       <div class="features-grid">
         <div class="feature-box">
           <span class="icon" aria-hidden="true">🏂</span>
@@ -137,6 +145,7 @@
         </div>
       </section>
 
+      <!-- Additional Info Section -->
       <article class="section box">
         <h2>Why Inclusive Winter Sports Matter</h2>
         <p>
@@ -145,10 +154,10 @@
           offer unique benefits:
         </p>
         <ul class="values">
-          <li>[ icon ] Builds confidence and independence</li>
-          <li>[ icon ] Improves physical strength and coordination</li>
-          <li>[ icon ] Creates lasting friendships and community</li>
-          <li>[ icon ] Provides equal access to outdoor recreation</li>
+          <li>💪 Builds confidence and independence</li>
+          <li>🏃 Improves physical strength and coordination</li>
+          <li>👥 Creates lasting friendships and community</li>
+          <li>♿ Provides equal access to outdoor recreation</li>
         </ul>
         <p>
           Our programs have helped hundreds of individuals discover the joy of winter sports, 
@@ -157,10 +166,11 @@
         <div class="decor" aria-hidden="true"><span></span><span></span></div>
       </article>
 
+      <!-- Video placeholder -->
       <section class="section box">
         <h2>See Our Programs in Action</h2>
-        <div class="hero-media" style="height: 280px;" role="img" aria-label="Video placeholder showing inclusive winter sports programs">
-          <span>[ Video: Adaptive Winter Sports Program ]</span>
+        <div class="hero-media" style="height: 280px;" role="img" aria-label="Video showing inclusive winter sports programs">
+          <img src="https://images.unsplash.com/photo-1551698618-1dfe5d97d256?w=800&h=400&fit=crop" alt="Adaptive skiing program in action" />
         </div>
         <p style="margin-top: 14px; line-height: 1.6;">
           Watch how our certified instructors work with athletes of all abilities to create 
@@ -169,6 +179,7 @@
         </p>
       </section>
 
+      <!-- Call to Action -->
       <section class="cta-section">
         <h2>Ready to Join Us?</h2>
         <p>
@@ -176,7 +187,7 @@
           supportive, accessible environment. Our team is here to answer any questions and help 
           you plan the perfect trip.
         </p>
-        <a class="btn" href="../contact.html">Contact Us Today</a>
+        <a class="btn" href="contact.html">Contact Us Today</a>
       </section>
     </main>
 
